# sdk-playground

./: .gitignore  .ruff.toml  Makefile  README.md  openapi.yaml  pyproject.toml  requirements-spec.txt
.github/workflows/: test.yml
localstack-sdk/: .openapi-generator-ignore
localstack-sdk-generated/: .openapi-generator-ignore  pyproject.toml  setup.py
localstack-sdk-generated/.openapi-generator/: FILES
localstack-sdk-generated/localstack/: api_client.py  configuration.py  exceptions.py  rest.py
localstack-sdk-generated/localstack/api/: __init__.py  aws_api.py  chaos_api.py  default_api.py  localstack_api.py  pods_api.py  pro_api.py  state_api.py
localstack-sdk-generated/localstack/models/: __init__.py  cloud_watch_metrics.py  cloud_watch_metrics_metrics_inner.py  cloud_watch_metrics_metrics_inner_d_inner.py  cloud_watch_metrics_metrics_inner_d_inner_v.py  cloud_watch_metrics_metrics_inner_v.py  create_remote_request.py  fault_rule.py  fault_rule_error.py  get_diagnostics200_response.py  get_diagnostics200_response_logs.py  get_diagnostics200_response_version.py  get_diagnostics200_response_version_image_version.py  get_diagnostics200_response_version_localstack_version.py  get_features_and_services200_response.py  get_lambda_runtimes200_response.py  get_remote200_response.py  get_ses_messages200_response.py  get_sns_messages200_response.py  get_sns_subscription_token200_response.py  init_scripts.py  init_scripts_completed.py  init_scripts_scripts_inner.py  init_scripts_stage.py  list_remotes200_response.py  list_remotes200_response_remotes_inner.py  localstack_pods_environment_get200_response.py  localstack_stackinfo_get200_response.py  pod_list.py  pod_list_cloudpods_inner.py  pod_versions.py  pod_versions_versions_inner.py  remote_config.py  remote_config_one_of.py  ses_sent_email.py  ses_sent_email_body.py  session_info.py  state_result.py
localstack-sdk-generated/templates/: rest.mustache
localstack-sdk-python/: pyproject.toml
localstack-sdk-python/localstack/: clients.py
localstack-sdk-python/localstack/chaos/: __init__.py  client.py  managers.py
localstack-sdk-python/localstack/models/: __init__.py
localstack-sdk-python/tests/: test_chaos.py
localstack-sdk-python/tests/integration/: test_pods.py
localstack-sdk/localstack/sdk/: clients.py
scripts/: create_spec.py
templates/: api.mustache
tests/: test_chaos.py  test_localstack_client.py  test_smoke.py
