[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "localstack-sdk"
readme = "README.md"
description = "Python SDK for LocalStack"
authors = [
        { name = "LocalStack Team", email = "info@localstack.cloud"}
]
version = "0.1"

# todo: proper split dependencies (there look like dev dependencies, since they are only used to generate the yaml file
dependencies = [
    "localstack-core>=3.7.3.dev41,<3.8",
    "localstack-core[dev]>=3.7.3.dev41,<3.8",
    "localstack-ext>=3.7.3.dev55,<3.8",
    "urllib3>=1.25.3",
    "python-dateutil>=2.8.2",
    "pydantic>=2",
    "typing-extensions>=4.7.1"
]

[tool.setuptools]
include-package-data = false

package-dir = { "" = "localstack-sdk"}

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["localstack-sdk/"]
include = ["localstack*"]
exclude = ["tests*"]

