[project]
name = "localstack-sdk-generated"
version = "0.0.1" # todo: automate this (should be from localstack)
description = "LocalStack REST API - Generated Code"
authors = [
        { name = "LocalStack Contributors", email = "info@localstack.cloud" }
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "."}

[tool.setuptools.packages.find]
where = ["localstack-sdk-generated"]
include = ["localstack*"]
exclude = ["tests*"]
